# swebenchvetted

./: .gitignore  README.md  pyproject.toml
src/swebench_eval/: cli.py  docker_builder.py  docker_runner.py  evaluator.py  litellm_proxy.py  models.py  orchestrator.py  output.py  scoring.py  task_loader.py
